--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.1",
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^4.0.1",
