--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
